# TaskAPI

./: alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 005973fa6a00_add_all_columns_to_t_posts.py  0b4a7bcf2233_create_table_users.py  0db9c7758145_create_post_table.py  1e84faf77d81_add_fk_t_posts_table.py  4d3de7a365c9_add_column_to_t_posts.py  6cff786b8fb1_phone_column.py  f82c935c2543_auto_add_likes_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  likes.py  post.py  user.py
tests/: conftest.py  database.py  test_likes.py  test_posts.py  test_user.py  user_test.py
