[tool.poetry]
name = "taskapi"
version = "0.1.0"
description = ""
authors = ["xinxilope <mateuseidt10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.9.4"
anyio = "3.6.2"
bcrypt = "4.0.1"
cffi = "1.15.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "39.0.1"
dnspython = "2.3.0"
ecdsa = "0.18.0"
email-validator = "1.3.1"
fastapi = "0.85.1"
greenlet = "2.0.1"
h11 = "0.14.0"
idna = "3.4"
mako = "1.2.4"
markupsafe = "2.1.2"
numpy = "1.23.4"
pandas = "1.5.1"
passlib = "1.7.4"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.10.2"
pyodbc = "4.0.34"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pytz = "2022.5"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.46"
starlette = "0.20.4"
typing-extensions = "4.4.0"
uvicorn = "0.19.0"
wget = "3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
